--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -16,7 +16,7 @@
         <td><%= user.email %></td>
         <td>
           <% if user.is_deleted? %>
-            <span class="badge bg-danger badge-lg">無効</span>	
+            <span class="badge bg-danger badge-lg">停止中</span>	
           <% else %>
             <span class="badge bg-success badge-lg">有効</span>
           <% end %>
