--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -12,7 +12,7 @@
 <div class="text-center border-dotted border-t-2 border-fitting-pink py-20 mt-5">
   <h1 class=" text-2xl title-font text-gray-900 mb-4">ととの〜るの使い方</h1>
   <div class="text-base leading-relaxed mx-auto text-gray-500 ">
-    <h5>ととの〜るはサウナが好きな人のためのサ活（サウナ活動）レビューサイトです。<br>日々の自分自身のサ活をレビューして次回のサウナより素晴らしいものにしていくことを目的として作成しました。</h5>
+    <h5>ととの〜るはサウナが好きな人のためのサ活（サウナ活動）レビューサイトです。<br>日々の自分自身のサ活をレビューして次回のサウナをより素晴らしいものにしていくことを目的として作成しました。</h5>
   </div>
   <%= render 'layouts/steam' %>
   <div class="flex mt-6 justify-center">
@@ -52,7 +52,7 @@
       </div>
       <div class="flex-grow">
         <h2 class="font-kaisei text-gray-900 text-lg title-font font-medium mb-3">その3. <br>日々のサ活を<br>投稿してみよう</h2>
-        <p class="leading-relaxed text-base text-gray-500">　ユーザ登録を済ませたら、フッターの「投稿する」ボタンから<br>自分自身のサ活を投稿してみよう<br>投稿時のサウナ施設の入力はAPIを導入してスポットの予測変換ができます</p>
+        <p class="leading-relaxed text-base text-gray-500">　ユーザ登録を済ませたら、フッターの「投稿する」ボタンから<br>自分自身のサ活を投稿してみよう<br>投稿時のサウナ施設の入力はAPIを導入しているので予測変換ができます</p>
       </div>
     </div>
   </div>
