--- a/app/views/user/contents/_form.html.erb
+++ b/app/views/user/contents/_form.html.erb
@@ -5,11 +5,11 @@
   </div>
   <div class="form-group">
     <%= f.label :text, "投稿内容" %>
-    <%= f.text_area :text, class: "form-control form-control-sm", rows: 3 %>
+    <%= f.text_area :text, class: "form-control form-control-sm", rows: 5 %>
   </div>
   <div class="form-row">
     <div class="form-group col-md-6">
-      <%= f.label :visit_day, "訪問した日" %>
+      <%= f.label :visit_day, "訪問した日(フォーム欄のカレンダーマークから入力してください)" %>
       <%= f.date_field :visit_day ,class: "form-control form-control-sm" %>
     </div>
     <div class="form-group col-md-6">
@@ -22,7 +22,7 @@
    <!-- newとeditを区別するためのif文  -->
   <% if content.id.nil? %>
     <div class="form-group" id="star">
-      <%= f.label :rate %>
+      <%= f.label :rate, "ととのい度(５段階で評価をつけることができます)" %>
       <%= f.hidden_field :rate, id: :review_star, class: 'form-control' %>
       <div id="post_raty"></div>
     </div>
@@ -31,9 +31,10 @@
       <%= render "static_rate", content: content %>
     </div>
   <% end %>
-
-  <%= f.submit type, class: "btn btn-primary btn-sm" %>
-  <%= link_to "戻る", contents_path, class: "btn btn-secondary btn-sm" %>
+  <div class="d-flex justify-content-between mt-3">
+    <%= f.submit type, class: "btn btn-primary btn-sm" %>
+    <%= link_to "投稿一覧に戻る", contents_path, class: "btn btn-secondary btn-sm" %>
+  </div>
 <% end %>
 
 <script>
