--- a/app/views/user/contents/_spotform.html.erb
+++ b/app/views/user/contents/_spotform.html.erb
@@ -1,5 +1,5 @@
 <div class="form-group">
-  <%= f.label :spot, "スポット（入力すると候補が表示されます）" %>
+  <%= f.label :spot, "サウナ（入力すると候補が表示されます）" %>
   <%= f.text_field :spot, class: "form-control form-control-sm", id: "address", type: "textbox", size: "50", autocomplete: "off" %>
 </div>
 
