--- a/app/views/user/contents/index.html.erb
+++ b/app/views/user/contents/index.html.erb
@@ -1,1 +1,9 @@
 <%= render 'index', contents: @contents %>
+
+<div class="row">
+  <div class="offset-4">
+    <div class="paginate">
+      <%= paginate @contents %>
+    </div>
+  </div>
+</div>
