--- a/app/views/user/users/edit.html.erb
+++ b/app/views/user/users/edit.html.erb
@@ -1,5 +1,5 @@
 <%= form_with model: @user, url: update_information_path, method: :patch, class: "my-form", multipart: true do |f| %>
-  <div class="container">
+  <div class="infomation-edit">
     <table class="table table-bordered">
       <tr>
         <td>ユーザ名</td>
@@ -31,7 +31,8 @@
         <td colspan="2">
           <div class="d-flex justify-content-between">
             <%= f.submit "編集内容を保存する", class: "btn btn-primary" %>
-            <%= link_to "退会する", finalcheck_path, class: "btn btn-danger" %>
+            <%= link_to "マイページに戻る" , mypage_path , class: "btn btn-secondary" %>
+            <%= link_to "アカウントを停止する", finalcheck_path, class: "btn btn-danger" %>
           </div>
         </td>
       </tr>
