--- a/app/views/user/contents/new.html.erb
+++ b/app/views/user/contents/new.html.erb
@@ -1,3 +1,3 @@
-<h3>日々のサ活をレビューしよう</h3>
+<h3 class="mt-3 mb-3">日々のサ活をレビューしよう</h3>
 <%= render partial: "user/contents/form", locals: {type:"投稿する",content: @content,method: nil} %>
 
