--- a/app/views/user/contents/_show.html.erb
+++ b/app/views/user/contents/_show.html.erb
@@ -39,7 +39,7 @@
             <td><%= @content.spot%></td>
           </tr>
           <tr>
-            <th>レビュー</th>
+            <th>ととのい度</th>
             <td><%= render "user/contents/static_rate", content: content %></td>
           </tr>
         </tbody>
