--- a/app/views/user/registrations/new.html.erb
+++ b/app/views/user/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
     <div class=col-10>
-      <h4>新規会員登録をする</h4>
+      <h4>新規でユーザ登録をする</h4>
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= render "user/shared/error_messages", resource: resource %>
         <div class="field">
@@ -24,11 +24,11 @@
         </div>
 
         <div class="actions">
-          <%= f.submit "新規会員登録", class:"btn btn-success mt-2" %>
+          <%= f.submit "新規登録", class:"btn btn-success mt-2" %>
         </div>
       <% end %>
 
-      <h4 class="mt-5" >既に会員済みの方</h4>
+      <h4 class="mt-5" >既に登録がお済みの方</h4>
       <%= link_to "こちら",new_user_session_path%>からログインをしてください
 
     </div>
