--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -92,8 +92,8 @@ footer {
     height: 3px
   }
   .logo-img {
-    width: 45px;
-    height: 45px;
+    width: 40px;
+    height: 40px;
     margin: 0;
   }
   .footer-logo-img {
@@ -101,7 +101,9 @@ footer {
     height: 45px;
     margin: 0;
   }
-  
+  .navbar-text {
+    font-size: 8px;
+  }
 }
 
 /*湯気エフェクト*/
