--- a/app/views/user/searches/find.html.erb
+++ b/app/views/user/searches/find.html.erb
@@ -1,10 +1,11 @@
 
-<h3 class="pt-3">このページは様々な検索ができます</h3>
+<h3 class="pt-3">このページでは様々な検索ができます</h3>
 
 <div class="row mt-5">
   <div class="col-sm-5 ">
   <h6>絞り込み検索を行うことができます</h6>
-  ＜投稿日＞
+  <h6>〜<strong>投稿日</strong>で検索ができます〜</h6>
+    <%= form_with(url: searches_path, method: :get, local: true) do |f| %>
       <table class="table">
         <thead>
           <tr>
@@ -15,18 +16,49 @@
         <tbody>
           <tr>
             <td>
-              <div class="form-group">
+              <div class="field">
+                <%= f.label(:start_date, "ここから") %>
+                <%= f.date_field :start_date %>
               </div>
             </td>
-            <span>~</span>
             <td>
-              <div class="form-group">
+              <div class="field">
+                <%= f.label(:end_date, "ここまで") %>
+                <%= f.date_field :end_date %>
               </div>
             </td>
           </tr>
         </tbody>
       </table>
-      <%= submit_tag "絞り込み", class: "btn btn-primary " %>
+
+  <h6>〜<strong>訪問日</strong>で検索ができます〜</h6>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>開始日</th>
+            <th>終了日</th>
+          </tr>
+        </thead>
+        <tbody>
+            <tr>
+              <td>
+                <div class="field">
+                  <%= f.label(:start_date, "ここから") %>
+                  <%= f.date_field :start_date,value: :visit_day %>
+                </div>
+              </td>
+              <td>
+                <div class="field">
+                  <%= f.label(:end_date, "ここまで") %>
+                  <%= f.date_field :end_date, value: :visit_day %>
+                </div>
+              </td>
+            </tr>
+        </tbody>
+      </table>
+      <%= f.submit "検索する", class: "btn btn-info mb-2" %>
+    <% end %>
+
   </div>
 
   
