一覧を昇順にする、管理者で投稿日を変える

--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,6 +1,6 @@
 <h2>全ての投稿を確認する</h2>
 <%= render 'user/contents/index', contents: @contents %>
 
-
+<%= render 'user/contents/paginate', contents: @contents%>
 
 
