コメントのエラー解消その他諸々

--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -14,7 +14,7 @@
     </tr>
     <tr>
       <th scope="row">プロフィール画像</th>
-      <td><%= image_tag @user.get_profile_image %></td>
+      <td><%= image_tag @user.get_profile_image, size: "100x100" %></td>
     </tr>
     <%= form_with model:@user, url: admin_user_path(@user) do |f| %>
       <tr>
