--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -27,7 +27,7 @@
         <a class="sub-belonging" href="https://storyset.com/internet">Internet illustrations by Storyset</a>
       </div>
       <div class="flex-grow">
-        <h2 class="font-kaisei text-gray-900 text-lg title-font font-medium mb-3">その1. <br>みんなのサ活を<br>みてみよう</h2>
+        <h2 class="font-kaisei text-gray-900 text-lg title-font font-medium mb-3">その1. <br>みんなのサ活を<br>見てみよう</h2>
         <p class="leading-relaxed text-base text-gray-500">　まずはページ下部のゲストログインから投稿しているサ活レビューをみてみよう</p>
       </div>
     </div>
@@ -40,7 +40,7 @@
       </div>
       <div class="flex-grow">
         <h2 class="font-kaisei text-gray-900 text-lg title-font font-medium mb-3">その2. <br>ユーザ登録を<br>してみよう</h2>
-        <p class="leading-relaxed text-base text-gray-500">　ユーザ名とメールアドレスとパスワードでユーザ登録ができます<br>ユーザ登録すると、「サ活の投稿」ができるようになります</p>
+        <p class="leading-relaxed text-base text-gray-500">　ユーザ名とメールアドレスとパスワードでユーザ登録ができます<br>ユーザ登録すると、「サ活のレビュー」ができるようになります</p>
       </div>
     </div>
   </div>
@@ -51,14 +51,14 @@
         <a class="sub-belonging" href="https://storyset.com/social-media">Social media illustrations by Storyset</a>
       </div>
       <div class="flex-grow">
-        <h2 class="font-kaisei text-gray-900 text-lg title-font font-medium mb-3">その3. <br>日々のサ活を<br>投稿してみよう</h2>
-        <p class="leading-relaxed text-base text-gray-500">　ユーザ登録を済ませたら、フッターの「投稿する」ボタンから<br>自分自身のサ活を投稿してみよう<br>投稿時のサウナ施設の入力はAPIを導入しているので予測変換ができます</p>
+        <h2 class="font-kaisei text-gray-900 text-lg title-font font-medium mb-3">その3. <br>日々のサ活を<br>レビューしよう</h2>
+        <p class="leading-relaxed text-base text-gray-500">　ユーザ登録を済ませたら、フッターの「投稿する」ボタンから自身の<br>サ活をレビューして投稿してみよう<br>投稿時のサウナ施設の入力はAPIを導入しているので予測変換ができます</p>
       </div>
     </div>
   </div>
 </div>
 <div class="enter-btn text-center pb-5 ">
-    <%= link_to "ゲストでログインする", homes_guest_sign_in_path, method: :post,class:"btn btn-outline-secondary mr-3" %>
-    <%= link_to "新規登録してはじめる", new_user_registration_path,class:"btn btn-outline-secondary mr-3" %>
+    <%= link_to "ゲストでログインする", homes_guest_sign_in_path, method: :post,class:"btn btn-outline-secondary md-mr-3" %>
+    <%= link_to "新規登録してはじめる", new_user_registration_path,class:"btn btn-outline-secondary md-mr-3" %>
     <%= link_to "ログインしてはじめる", new_user_session_path,class:"btn btn-outline-secondary" %>
 </div>
