--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,6 +30,7 @@ footer {
   color: #fff;
   text-align: center;
   text-shadow: 3px 4px 3px rgb(61, 70, 70);
+  display: none;
 }
 
 .top-image {
@@ -75,22 +76,31 @@ footer {
   padding-bottom: 300px;
 }
 
+
 /*レスポンシブ対応*/
 /* スマートフォンサイズ（425px）以下の際に適用される設定 */
 @media screen and (max-width:425px) {
   .top-title {
     position: absolute;
-    font-size: 15px;
-    padding: 120px;
+    font-size: 10px;
+    padding: 0;
+    width: auto;
+    display: inline-block;
   }
   .steam01 img, .steam03 img {
-  width: 2px;
-  height: 4px
+    width: 2px;
+    height: 4px
   }
   .steam02 img {
     width: 2px;
     height: 3px
   }
+  
+  .belonging {
+    font-size: 8px;
+    margin: 0 ;
+    padding: 0 0 0 130px;
+  }  
   .logo-img {
     width: 40px;
     height: 40px;
