--- a/app/views/user/comments/create.js.erb
+++ b/app/views/user/comments/create.js.erb
@@ -1,1 +1,3 @@
 $("#comments_list").html("<%= j( render "user/contents/comments_list",content: @content )%>");
+<!--コメント後にコメントフォームをクリアにする処理-->
+$('.comment-textarea').val('');
