--- a/app/views/user/contents/_comments_list.html.erb
+++ b/app/views/user/contents/_comments_list.html.erb
@@ -5,7 +5,7 @@
       <span class="comment-name small"><%= comment.user.name %></span>
       <span>
         <% if comment.user == current_user %>
-          <%= link_to '削除する', content_comment_path(content, comment), method: :delete, remote: true, class: "btn btn-danger btn-sm" %>
+          <%= link_to '削除', content_comment_path(content, comment), method: :delete, remote: true, class: "btn btn-danger btn-sm" %>
         <% end %>
       </span>
     　<p class="card-text"><%= comment.comment %></p>
