--- a/app/views/user/searches/find.html.erb
+++ b/app/views/user/searches/find.html.erb
@@ -1,67 +1,48 @@
 
 <h3 class="pt-3">このページでは様々な検索ができます</h3>
 
-<div class="row mt-5">
-  <div class="col-sm-5 ">
-  <h6>絞り込み検索を行うことができます</h6>
-  <h6>〜<strong>投稿日</strong>で検索ができます〜</h6>
-    <%= form_with(url: searches_path, method: :get, local: true) do |f| %>
-      <table class="table">
-        <thead>
-          <tr>
-            <th>開始日</th>
-            <th>終了日</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>
-              <div class="field">
-                <%= f.label(:start_date, "ここから") %>
-                <%= f.date_field :start_date %>
-              </div>
-            </td>
-            <td>
-              <div class="field">
-                <%= f.label(:end_date, "ここまで") %>
-                <%= f.date_field :end_date %>
-              </div>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-
-  <h6>〜<strong>訪問日</strong>で検索ができます〜</h6>
-      <table class="table">
-        <thead>
-          <tr>
-            <th>開始日</th>
-            <th>終了日</th>
-          </tr>
-        </thead>
-        <tbody>
+  <div class="row mt-5">
+    <div class="col-sm-5">
+      <h6>絞り込み検索を行うことができます</h6>
+      <h6>〜<strong>投稿日</strong>または<strong>訪問日</strong>で検索ができます〜</h6>
+  
+      <%= form_with(url: searches_path, method: :get, local: true) do |f| %>
+        <div class="form-group">
+          <%= f.label(:search_field, "検索タイプ") %>
+          <%= f.select(:search_field, { "訪問日" => "visit_day", "投稿日" => "created_at" }, {}, class: "form-control") %>
+        </div>
+  
+        <table class="table">
+          <thead>
+            <tr>
+              <th>開始日</th>
+              <th>終了日</th>
+            </tr>
+          </thead>
+          <tbody>
             <tr>
               <td>
-                <div class="field">
+                <div class="form-group">
                   <%= f.label(:start_date, "ここから") %>
-                  <%= f.date_field :start_date,value: :visit_day %>
+                  <%= f.date_field(:start_date, class: "form-control") %>
                 </div>
               </td>
               <td>
-                <div class="field">
+                <div class="form-group">
                   <%= f.label(:end_date, "ここまで") %>
-                  <%= f.date_field :end_date, value: :visit_day %>
+                  <%= f.date_field(:end_date, class: "form-control") %>
                 </div>
               </td>
             </tr>
-        </tbody>
-      </table>
-      <%= f.submit "検索する", class: "btn btn-info mb-2" %>
-    <% end %>
+          </tbody>
+        </table>
+        <div class="d-flex justify-content-between">
+          <%= f.submit "検索する", class: "btn btn-info mb-2" %>
+          <%= button_tag "入力クリア", type: "reset", class: "btn btn-light mb-2" %>
+        </div>
+      <% end %>
+    </div>
 
-  </div>
-
-  
   
   <div class="col-sm-7">
     <h6>タグの検索を行うことができます</h6>
