--- a/app/views/user/contents/_form.html.erb
+++ b/app/views/user/contents/_form.html.erb
@@ -13,10 +13,11 @@
       <%= f.date_field :visit_day ,class: "form-control form-control-sm" %>
     </div>
     <div class="form-group col-md-6">
-      <%= f.label :name, "タグ(複数登録するには , で区切りましょう)" %>
-      <%= f.text_field :name, value: @tag_list, class: "form-control form-control-sm" %>
+      <%= f.label :Tag, "タグ(複数登録するには , で区切りましょう)" %>
+      <%= f.text_field :tag_name, value: @tag_list, class: "form-control form-control-sm" %>
     </div>
   </div>
+  
   <%= render 'user/contents/spotform', f: f %>
   
    <!-- newとeditを区別するためのif文  -->
@@ -52,4 +53,6 @@
     };
     raty(elem, opt);
   });
+  
+  
 </script>
