--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -34,12 +34,14 @@
           </div>
         </div>
         <%= paginate @contents %>
-        <div class="row">
-          <div class="offset-2">
-            <p><%= link_to "プロフィールを編集する", edit_information_path, class: "btn btn-primary" %>
-            <span><%= link_to "パスワードの変更/退会", edit_user_registration_path, class: "btn btn-danger" %></span></%></p>
+        <% if current_user != @user %>
+          <div class="row">
+            <div class="offset-2">
+              <p><%= link_to "プロフィールを編集する", edit_information_path, class: "btn btn-primary" %>
+              <span><%= link_to "パスワードの変更/退会", edit_user_registration_path, class: "btn btn-danger" %></span></%></p>
+            </div>
           </div>
-        </div>
+        <% end %>
       </div>
     </div>
   </div>
