--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,7 +5,7 @@
         <% unless current_page?(root_path) %>
           <% if user_signed_in? %>
             <li class="list-inline-item">
-              <%= link_to mypage_path do %>
+              <%= link_to myshow_path do %>
                 <%= image_tag 'mypage.png' , class:"footer-logo-img" %>
               <% end %>
             </li>
