ホームサウナの表示を変更,ゲストログインでの権限を修正

--- a/app/views/user/users/_mypage.html.erb
+++ b/app/views/user/users/_mypage.html.erb
@@ -22,13 +22,24 @@
         <%= current_user.email %>
       <% end %>
     </p>
-    <p class="mb-0 text-muted">私のホームサウナは</p>
-      <p> <% if params[:id] %>
-        <%= user.myspot %>
+    <% if params[:id] %>
+      <% if user.myspot.present? %>
+        <p class="mb-0 text-muted">私のホームサウナは</p>
+        <p><%= user.myspot %> <span class="mb-0 text-muted" >です。</span> </p>
       <% else %>
-        <%= current_user.myspot %>
       <% end %>
-    です。　</p>
+    <% else %>
+      <% if current_user.myspot.present? %>
+        <p class="mb-0 text-muted">私のホームサウナは</p>
+        <p><%= current_user.myspot %> <span class="mb-0 text-muted" >です。</span> </p>
+      <% else %>
+        <p class="mb-0 text-primary" >
+           <%= link_to edit_information_path do %>
+             編集画面でホームサウナの登録をしよう！
+           <% end %>
+        </p>
+      <% end %>
+    <% end %>
   </div>
 </div>
 
