いいね機能の実装

--- a/app/views/user/contents/show.html.erb
+++ b/app/views/user/contents/show.html.erb
@@ -1,5 +1,6 @@
 <div class="row">
-  <%= render 'show',content: @content %>
+  <%= render 'favorite' , content: @content %>
+  <%= render 'show' , content: @content %>
   <div class="col-md-4">
     <div class="card">
       <div class="card-header">
